--- a/src/package.json
+++ b/src/package.json
@@ -16,10 +16,10 @@
     "expo-status-bar": "~1.4.4",
     "npm-check": "^6.0.1",
     "react": "18.2.0",
-    "react-native": "0.71.11",
-    "react-native-safe-area-context": "^4.5.3",
+    "react-native": "0.71.8",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screen": "^1.0.1",
-    "react-native-screens": "^3.21.0"
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
