--- a/src/package.json
+++ b/src/package.json
@@ -19,7 +19,8 @@
     "react-native": "0.71.8",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screen": "^1.0.1",
-    "react-native-screens": "~3.20.0"
+    "react-native-screens": "~3.20.0",
+    "expo-checkbox": "~2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
