--- a/package.json
+++ b/package.json
@@ -9,24 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.4.0",
     "expo": "^48.0.19",
     "expo-checkbox": "~2.3.1",
+    "expo-dev-client": "~2.2.1",
     "expo-status-bar": "~1.4.4",
     "npm-check": "^6.0.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screen": "^1.0.1",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3"
   },
   "private": true
 }
