--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.1.0",
+    "react-native-text-ticker": "^1.14.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
