--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@rneui/base": "^4.0.0-rc.7",
-    "@rneui/themed": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.4.0",
     "expo": "^48.0.19",
     "expo-checkbox": "~2.3.1",
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screen": "^1.0.1",
     "react-native-screens": "~3.20.0",
+    "react-native-select-dropdown": "^3.3.4",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-text-ticker": "^1.14.0",
