--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-screen": "^1.0.1",
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.4",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-text-ticker": "^1.14.0",
