--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm-check": "^6.0.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-paper-dates": "^0.18.13",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screen": "^1.0.1",
     "react-native-screens": "~3.20.0",
