--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.1.0",
+    "react-native-text-size": "^4.0.0-rc.1",
     "react-native-text-ticker": "^1.14.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
