--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "expo": "^48.0.19",
     "expo-checkbox": "~2.3.1",
     "expo-dev-client": "~2.2.1",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "npm-check": "^6.0.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-image-picker": "^5.6.1",
     "react-native-paper-dates": "^0.18.13",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screen": "^1.0.1",
