--- a/app.json
+++ b/app.json
@@ -1,36 +1,37 @@
 {
-  "expo": {
-    "name": "src",
-    "slug": "src",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "package": "com.bixcuit.src"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "extra": {
-      "eas": {
-        "projectId": "a126adfa-e146-4303-b567-ff925fc78183"
-      }
+    "expo": {
+        "name": "JoyHub",
+        "slug": "joyhub",
+        "version": "1.0.0",
+        "orientation": "portrait",
+        "icon": "./assets/icon.png",
+        "userInterfaceStyle": "light",
+        "splash": {
+            "image": "./assets/splash.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
+        "assetBundlePatterns": [
+            "**/*"
+        ],
+        "ios": {
+            "supportsTablet": true
+        },
+        "android": {
+            "adaptiveIcon": {
+                "foregroundImage": "./assets/adaptive-icon.png",
+                "backgroundColor": "#ffffff"
+            },
+            "package": "com.bixcuit.src"
+        },
+        "web": {
+            "favicon": "./assets/favicon.png"
+        },
+        "id": "com.bixcuit.src",
+        "extra": {
+            "eas": {
+                "projectId": "f6b5a654-f815-4bbe-9eed-564d7d404a8b"
+            }
+        }
     }
-  }
 }
